# UxnVM-SYCL

./: Hi,.md  LICENSE  README.md  hello.cpp
UxnSourceCode/: temp.cpp  temp.h
UxnSourceCode/uxn/: CMakeLists.txt
UxnSourceCode/uxn/src/: uxn.c  uxn.h  uxnasm.c  uxncli.c  uxnemu.c
UxnSyclImp/uxn/: .gitignore  CMakeLists.txt  README.md  build.sh
UxnSyclImp/uxn/Test/: test_example.cpp
UxnSyclImp/uxn/projects/software/: fib2.tal  fib32.tal  primes.tal  uxnlin.tal
UxnSyclImp/uxn/src/: uxn.cpp  uxn.h  uxnasm.cpp  uxncli.c  uxncli.cpp  uxnemu.c  uxnemu.cpp
UxnSyclImp/uxn/src/devices/: audio.cpp  controller.cpp  controller.h  datetime.cpp  file.cpp  mouse.cpp  mouse.h  screen.cpp  system.cpp  system.h
